2010-03-26  Till Kamppeter <till.kamppeter@gmail.com>

	* db/source/opt/GS-HalftoningAlgorithm-Gray.xml: Code snippets to
	  insert into the driver command line got truncated by too small
	  fields in the MySQL database on the OpenPrinting web
	  server (Ubuntu bug #541690).

2010-03-22  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/splix.xml, printer/Samsung-CLP-300.xml,
	  printer/Samsung-CLP-310.xml, printer/Samsung-CLP-315.xml: The
	  Samsung CLP-300, CLP-310, CLP-315, are compatible with each other,
	  added entry for the CLP-300, added CLP-315 to the "splix" driver,
	  updated the texts and made "splix" the recommended driver for all
	  the three.

2010-03-15  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/sparc.xml, driver/nwp533.xml: Removed driver entries for
	  Ghostscript drivers which do not build on standard Linux/Unix
	  systems. There are also no printer entries for these nor any
	  execution details or comments.

	* driver/la70t.xml: Removed driver entry for an output device
	  which was removed from Ghostscript years ago. It is a remainder
	  from the initial creation of a driver list when the Foomatic
	  project was started.


2010-03-15  OpenPrinting Web Server <webmaster@openprinting.org>

	* db/source/driver/lj5gray.xml,
	  db/source/opt/2.xml,
	  db/source/opt/cdj690X-Resolution.xml,
	  db/source/printer/Gestetner-MP_2851.xml,
	  db/source/printer/Gestetner-MP_3351.xml,
	  db/source/printer/Gestetner-MP_4001.xml,
	  db/source/printer/Gestetner-MP_5001.xml,
	  db/source/printer/Gestetner-MP_C6501.xml,
	  db/source/printer/Gestetner-MP_C7501.xml,
	  db/source/printer/Gestetner-SP_6330N.xml,
	  db/source/printer/Infotec-MP_2851.xml,
	  db/source/printer/Infotec-MP_3351.xml,
	  db/source/printer/Infotec-MP_4001.xml,
	  db/source/printer/Infotec-MP_5001.xml,
	  db/source/printer/Infotec-MP_C6501.xml,
	  db/source/printer/Infotec-MP_C7501.xml,
	  db/source/printer/Lanier-LP235N.xml,
	  db/source/printer/Lanier-MP_2851_LD528.xml,