@@ -18,6 +18,12 @@
       <charset>us-ascii</charset>
     </text>
   </lang>
+  <autodetect>
+    <general>
+      <manufacturer>HEWLETT-PACKARD</manufacturer>
+      <model>DESKJET 950C</model>
+    </general>
+  </autodetect>
   <functionality>A</functionality>
   <driver>hplip</driver>
   <comments>
