@@ -19,10 +19,10 @@
   </lang>
   <autodetect>
     <parallel>
-      <commandset>MLC,PML,PCL</commandset>
-      <description>Hewlett-Packard OfficeJet_Pro_K550</description>
-      <manufacturer>HEWLETT-PACKARD</manufacturer>
-      <model>HP OfficeJet Pro K550</model>
+      <commandset>MLC,PCL,PML,DESKJET,DW-PCL,DYN</commandset>
+      <description>HP Officejet Pro K550</description>
+      <manufacturer>HP</manufacturer>
+      <model>Officejet Pro K550</model>
     </parallel>
   </autodetect>
   <functionality>A</functionality>
