@@ -23,7 +23,7 @@
       <commandset>MLC,PCL,PML,DW-PCL</commandset>
       <description>hp photosmart 2570</description>
       <manufacturer>HP</manufacturer>
-      <model>PHOTOSMART 2570</model>
+      <model>Photosmart 2570 series</model>
     </general>
   </autodetect>
   <functionality>A</functionality>
