@@ -1,3 +1,12 @@
+2010-03-26  Tim Waugh <twaugh@redhat.com>
+
+	* db/source/printer/HP-PhotoSmart_2570.xml: Corrected IEEE
+	  1284 Device ID (RH bug #577280).
+	* db/source/printer/HP-DeskJet_959C.xml: Added IEEE 1284
+	  Device ID (RH bug #577293).
+	* db/source/printer/HP-OfficeJet_Pro_K550.xml: Corrected IEEE
+	  1284 Device ID (RH bug #577294).
+
 2010-03-26  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* db/source/opt/GS-HalftoningAlgorithm-Gray.xml: Code snippets to
